--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>PWA Todo App</title>
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="style.css">
+  <link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#2196f3" />
+
 </head>
 <body>
   <h1>📋 Todo PWA</h1>
