--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Todo PWA</title>
+  <title> PWA</title>
 
   <!-- manifest -->
   <link rel="manifest" href="/manifest.json" />
@@ -28,7 +28,7 @@
   </style>
 </head>
 <body>
-  <h1>Todo PWA ✅</h1>
+  <h1> PWA </h1>
   <input type="text" id="todoInput" placeholder="เพิ่มงานใหม่..." />
   <button onclick="addTodo()">เพิ่ม</button>
   <ul id="todoList"></ul>
